src/test/ui/rfc-2008-non-exhaustive/uninhabited/match.stderr
error[E0004]: non-exhaustive patterns: type `uninhabited::UninhabitedEnum` is non-empty
  --> $DIR/match.rs:19:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `uninhabited::UninhabitedStruct` is non-empty
  --> $DIR/match.rs:23:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `uninhabited::UninhabitedTupleStruct` is non-empty
  --> $DIR/match.rs:27:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `Tuple(_)` and `Struct { .. }` not covered
  --> $DIR/match.rs:31:11
   |
LL |     match x {}
   |           ^ patterns `Tuple(_)` and `Struct { .. }` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
